proconio/tests/ui/fastout/requires-at-least-a-format-string-argument.stderr
error: requires at least a format string argument
 --> $DIR/requires-at-least-a-format-string-argument.rs:5:5
  |
5 |     print!();
  |     ^^^^^^^^
  |
  = note: this error originates in the macro `$crate::format_args` which comes from the expansion of the macro `print` (in Nightly builds, run with -Z macro-backtrace for more info)
