proconio/tests/ui/fastout/requires-at-least-a-format-string-argument.rs
use proconio::fastout;

#[fastout]
fn main() {
    print!();
}
